k8s/frontend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: smarthostel-frontend

  labels:
    app: smarthostel-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: smarthostel-frontend

  template:
    metadata:
      labels:
        app: smarthostel-frontend

    spec:
      containers:

        - name: frontend

          image: docker.io/library/smarthostel-frontend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"

            limits:
              memory: "256Mi"
              cpu: "300m"
