k8s/backend-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: smarthostel-backend-service

spec:
  selector:
    app: smarthostel-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001

  type: ClusterIP
