k8s/frontend-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: smarthostel-frontend-service

spec:
  selector:
    app: smarthostel-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
